test/invalid/baseline/typedef-nested.txt
Syntax error at line 14, since `interface Widget`:
    typedef sequence<Point>
    ^ Missing return type
